--- a/teaching/index.html
+++ b/teaching/index.html
@@ -128,8 +128,7 @@
 									<img src="assets/weekly-lessons.jpg" alt="">
 									<div class="text">
 										<h3>Weekly Lessons</h3>
-										<p>Private instruction in music is highly individualized and can be tailored to fit the individual needs of the student. Though many schools offer music instruction, teachers’ time with their students is highly limited. In a private lesson, the student has my full time and attention every week for a set amount of time. Students who study privately make more progress and are generally more satisfied in their music study than those who only study it in school because they can focus more on proper technique and holistic learning than their colleagues who only learn in a class setting. Additionally, through private instruction students have the opportunity to be individually mentored by me. To learn more about my policies and tuition rates please read the <a href="#studio-policies">Studio Policies</a> section.
-										</p>
+										<p>Private instruction in music is highly individualized and can be tailored to fit the individual needs of the student. Though many schools offer music instruction, teachers’ time with their students is highly limited. In a private lesson, the student has my full time and attention every week during their lesson.  All of my students are required to take at least one private lesson a week.  In this lesson we cover violin technique, practice strategies (and games), music theory, musicianship, and many other topics.  In my experience as both a violin student and teacher I have found that those who study privately make more progress and are generally more satisfied in their music study.  To learn more about my policies and tuition rates please read the <a href="#studio-policies">Studio Policies</a> section.</p>
 										<button><a href="#opportunities" class="bottom-close close-modal">Close</a></button>
 									</div>
 								</div>
@@ -182,7 +181,7 @@
 									<img src="assets/parent-education.jpg" alt="">
 									<div class="text">
 										<h3>Parent Education</h3>
-										<p>Parent education is something that I am passionate about. Because I believe that parents are my greatest allies in the violin journey, I offer many forms of parent education. All families who are new to the violin are required to sign up for 3 forty-five minute parent education lessons with me. These parent education sessions are strictly between the teacher and the practice parent and occur before the child starts his/her first lesson. In these lessons, we will cover bowhold technique, Suzuki methodology, practice techniques, lesson etiquette, and much more.
+										<p>Parent education is something that I am passionate about. Because I believe that parents are my greatest allies in the violin journey, I offer many forms of parent education. All families who are new to the violin are required to sign up for two, 45 minute parent education lessons with me. These parent education sessions are strictly between the teacher and the practice parent and occur before the child starts his/her first lesson. In these lessons, we will cover bowhold technique, Suzuki methodology, practice techniques, lesson etiquette, and much more.
 										</p>
 										<p>Additionally, I occasionally hold private parent-teacher conferences to check in on how the students are doing during home practice. These meetings allow me to brainstorm with parents on how to meet their child’s individual practice needs.</p>
 										<button><a href="#opportunities" class="bottom-close close-modal">Close</a></button>
@@ -222,17 +221,17 @@
 		<nav class="media-links">
 			<ul>
 				<li>
-					<a href="https://www.facebook.com/Joycelynchooviolin/" target="_blank">
+					<a href="//www.facebook.com/Joycelynchooviolin/" target="_blank">
 						<i class="fa fa-facebook"></i>
 					</a>
 				</li>
 				<li>
-					<a href="https://www.linkedin.com/in/joycelyn-choo-a9b24a123" target="_blank">
+					<a href="//www.linkedin.com/in/joycelyn-choo-a9b24a123" target="_blank">
 						<i class="fa fa-linkedin"></i>
 					</a>
 				</li>
 				<li>
-					<a href="INSERT YELP HREF" target="_blank">
+					<a href="//www.yelp.com/biz/joycelyn-choo-walnut" target="_blank">
 						<i class="fa fa-yelp"></i>
 					</a>
 				</li>
