--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			</ul>
 		</nav>
 		<div class="footer-text">
-			<h6>joycelyn.a.choo@gmail.com | 714•393•6338</h6>
+			<h6>joycelyn.a.choo@gmail.com | 714-393-6338</h6>
 			<h6>Website by Benjamin Johnson</h6>
 		</div>
 	</footer>
