Updated special event request language and removed old youtube link

--- a/contact/index.html
+++ b/contact/index.html
@@ -278,7 +278,7 @@
 		<section id="perform" class="form-section">
 			<div class="intro">
 				<h2>Performance Request</h2>
-				<p>When I'm not teaching, I love to perform with my musical colleagues. If you are interested in contracting me to play for your special event (wedding, funeral, birthday party etc.) please fill out the form below to get a free quote. If you are looking for a specific group of musicians (String quartet, String Trio, Piano Trio, String Duo etc.) please indicate it below in the options and I will be able to arrange a group for you.</p>
+				<p>When I'm not teaching, I love to perform for special events. If you are interested in contracting me to play for your special event (wedding, funeral, birthday party, etc.), please fill out the form below for a free quote and consultation. If requested, I can assemble a string ensemble to meet your needs (string quartet, piano trio, string duo, etc.).</p>
 			</div>
 			<form id="performing-form" action="//formspree.io/joycelyn.a.choo@gmail.com" method="POST">
 				<input type="hidden" name="REQUEST TYPE" value="Performance Request">
@@ -307,11 +307,11 @@
 					<input type="date" required="true" name="Date">
 				</fieldset>
 				<fieldset>
-					<p class="required">Budget (Please expect at least $100 per person)*</p>
+					<p class="required">Budget*</p>
 					<input type="text" required="true" name="Budget">
 				</fieldset>
 				<fieldset>
-					<p class="required">Musicians desired (Quartet, Trio, Duo, Solo — Please specify what instruments you would like)*</p>
+					<p class="required">Musicians desired (Solo, Duo, Trio, Quartet — Please specify what instruments you would like)*</p>
 					<input type="text" required="true" name="Musicians desired">
 				</fieldset>
 				<fieldset>
