--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		</nav>
 		<div class="footer-text">
 			<h6>joycelyn.a.choo@gmail.com | 714•393•6338</h6>
-			<h6>Website by Benjamin Johnson</h6>
+			<h6>Website by Elliot Park and Benjamin Johnson</h6>
 		</div>
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
