--- a/teaching/index.html
+++ b/teaching/index.html
@@ -69,7 +69,7 @@
 			</div>
 			<div class="wrapper">
 				<div class="text section-text">
-					<p>At it’s core, my studio is about love and community. If you’re looking for a violin teacher who is not only concerned about her student’s technique, but is also genuinely interested in the lives of her students, then give me a call and sign up for a <a href="../contact" target="_blank">free trial lesson.</a> I am currently accepting students in the Walnut, CA area.</p>
+					<p>At it’s core, my studio is about love and community. If you’re looking for a violin teacher who is not only concerned about her student’s technique, but is also genuinely interested in the lives of her students, then give me a call and sign up for a <a href="../contact" target="_blank">free trial lesson.</a> I am currently accepting students in the Chino Hills, CA area.</p>
 				</div>
 			</div>
 		</section>
